--- a/about-legacy.html
+++ b/about-legacy.html
@@ -104,6 +104,7 @@
               role="menuitem"
             >
               <span class="flag-icon fr"></span>
+              <span class="lang-name">Français</span>
             </button>
             <button
               data-lang="ar"
@@ -111,6 +112,7 @@
               role="menuitem"
             >
               <span class="flag-icon ar"></span>
+              <span class="lang-name" style="justify-content: relative;">عربي</span>
             </button>
             <button
               data-lang="en"
@@ -118,9 +120,11 @@
               role="menuitem"
             >
               <span class="flag-icon en"></span>
+              <span class="lang-name">English</span>
             </button>
           </div>
         </div>
+
 
         <button class="mobile-menu-toggle" aria-label="Toggle menu">☰</button>
       </nav>
