--- a/clients.html
+++ b/clients.html
@@ -510,12 +510,17 @@
         <br />
         <br />
         <div class="container">
-          <div
-            class="testimonial-slider-placeholder"
-            data-aos="fade-up"
-            data-aos-delay="100"
-          >
-            <p>Placeholder: Intégrer un slider de témoignages (Swiper.js?).</p>
+          <div class="construction-container">
+            <video
+              autoplay
+              loop
+              muted
+              playsinline
+              src="/assets/images/video-car-side3.mp4"
+              aria-label="Vidéo Technologie Hamilcar"
+            >
+              Your browser does not support the video tag.
+            </video>
           </div>
 
           <!-- <div class="client-logos" data-aos="fade-up" data-aos-delay="200">
