--- a/contact.html
+++ b/contact.html
@@ -98,32 +98,22 @@
             <span class="flag-icon"></span>
           </button>
           <div id="lang-options" role="menu">
-            <button
-              data-lang="fr"
-              aria-label="Switch to French"
-              role="menuitem"
-            >
+            <button data-lang="fr" aria-label="Switch to French" role="menuitem">
               <span class="flag-icon fr"></span>
               <span class="lang-name">Français</span>
             </button>
-            <button
-              data-lang="ar"
-              aria-label="Switch to Arabic"
-              role="menuitem"
-            >
+            <!-- <button data-lang="ar" aria-label="Switch to Arabic" role="menuitem">
               <span class="flag-icon ar"></span>
-              <span class="lang-name" style="justify-content: relative;">عربي</span>
-            </button>
-            <button
-              data-lang="en"
-              aria-label="Switch to English"
-              role="menuitem"
-            >
+              <span class="lang-name">عربي</span>
+            </button> -->
+            <button data-lang="en" aria-label="Switch to English" role="menuitem">
               <span class="flag-icon en"></span>
               <span class="lang-name">English</span>
             </button>
           </div>
+          
         </div>
+
 
 
         <button class="mobile-menu-toggle" aria-label="Toggle menu">☰</button>
