--- a/about-legacy.html
+++ b/about-legacy.html
@@ -102,10 +102,10 @@
               <span class="flag-icon fr"></span>
               <span class="lang-name">Français</span>
             </button>
-            <button data-lang="ar" aria-label="Switch to Arabic" role="menuitem">
+            <!-- <button data-lang="ar" aria-label="Switch to Arabic" role="menuitem">
               <span class="flag-icon ar"></span>
               <span class="lang-name">عربي</span>
-            </button>
+            </button> -->
             <button data-lang="en" aria-label="Switch to English" role="menuitem">
               <span class="flag-icon en"></span>
               <span class="lang-name">English</span>
