clients-investors complete & navlink

--- a/vehicles.html
+++ b/vehicles.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header id="header" class="sticky">
+      <header id="header" class="sticky">
       <nav class="container">
         <a href="#hero" class="logo-link">
           <img
@@ -58,8 +58,8 @@
             <a
               href="/technology.html"
               data-translatable
-              data-fr="Technologie"
-              data-en="Design/ Technology"
+              data-fr="Design-Technologie"
+              data-en="Design-Technology"
               data-ar="تكنولوجيا"
             ></a>
           </li>
@@ -67,8 +67,8 @@
             <a
               href="/clients.html"
               data-translatable
-              data-fr="Clients"
-              data-en="Customer/ Investors"
+              data-fr="Clients-Investisseurs"
+              data-en="Clients-Investors"
               data-ar="عملاء"
             ></a>
           </li>
@@ -76,12 +76,29 @@
             <a
               href="/contact.html"
               data-translatable
-              data-fr="Contact"
-              data-en="Contact/ News"
+              data-fr="Contact-Nouveauté"
+              data-en="Contact-News"
               data-ar="اتصال"
             ></a>
           </li>
         </ul>
+
+        <div class="header-social">
+          <a
+            href="https://www.facebook.com/profile.php?id=100083210768748"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Facebook"
+            ><img src="/assets/icons/fb.png" alt="Facebook"
+          /></a>
+          <a
+            href="https://www.linkedin.com/in/hamilcar-tunisie-012b48252/"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="LinkedIn"
+            ><img src="/assets/icons/linkedin.png" alt="LinkedIn"
+          /></a>
+        </div>
 
         <div class="language-selector">
           <button
