--- a/about-legacy.html
+++ b/about-legacy.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header id="header" class="sticky">
+      <header id="header" class="sticky">
       <nav class="container">
         <a href="#hero" class="logo-link">
           <img
@@ -43,8 +43,7 @@
               data-fr="Présentation"
               data-en="About Us"
               data-ar="معلومات عنا"
-              ></a
-            >
+            ></a>
           </li>
           <li>
             <a
@@ -53,40 +52,53 @@
               data-fr="Véhicules Hamilcar"
               data-en="Hamilcar Vehicles"
               data-ar="مركبات هاميكار"
-              ></a
-            >
+            ></a>
           </li>
           <li>
             <a
               href="/technology.html"
               data-translatable
-              data-fr="Technologie"
-              data-en="Technology"
+              data-fr="Design-Technologie"
+              data-en="Design-Technology"
               data-ar="تكنولوجيا"
-              ></a
-            >
+            ></a>
           </li>
           <li>
             <a
               href="/clients.html"
               data-translatable
-              data-fr="Clients"
-              data-en="Clients"
+              data-fr="Clients-Investisseurs"
+              data-en="Clients-Investors"
               data-ar="عملاء"
-              ></a
-            >
+            ></a>
           </li>
           <li>
             <a
               href="/contact.html"
               data-translatable
-              data-fr="Contact"
-              data-en="Contact"
+              data-fr="Contact-Nouveauté"
+              data-en="Contact-News"
               data-ar="اتصال"
-              ></a
-            >
+            ></a>
           </li>
         </ul>
+
+        <div class="header-social">
+          <a
+            href="https://www.facebook.com/profile.php?id=100083210768748"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Facebook"
+            ><img src="/assets/icons/fb.png" alt="Facebook"
+          /></a>
+          <a
+            href="https://www.linkedin.com/in/hamilcar-tunisie-012b48252/"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="LinkedIn"
+            ><img src="/assets/icons/linkedin.png" alt="LinkedIn"
+          /></a>
+        </div>
 
         <div class="language-selector">
           <button
@@ -98,7 +110,11 @@
             <span class="flag-icon"></span>
           </button>
           <div id="lang-options" role="menu">
-            <button data-lang="fr" aria-label="Switch to French" role="menuitem">
+            <button
+              data-lang="fr"
+              aria-label="Switch to French"
+              role="menuitem"
+            >
               <span class="flag-icon fr"></span>
               <span class="lang-name">Français</span>
             </button>
@@ -106,14 +122,16 @@
               <span class="flag-icon ar"></span>
               <span class="lang-name">عربي</span>
             </button> -->
-            <button data-lang="en" aria-label="Switch to English" role="menuitem">
+            <button
+              data-lang="en"
+              aria-label="Switch to English"
+              role="menuitem"
+            >
               <span class="flag-icon en"></span>
               <span class="lang-name">English</span>
             </button>
           </div>
-          
         </div>
-
 
         <button class="mobile-menu-toggle" aria-label="Toggle menu">☰</button>
       </nav>
