header mobile menu

--- a/about-legacy.html
+++ b/about-legacy.html
@@ -147,7 +147,7 @@
           <h1
             data-aos="fade-down"
             data-translatable
-            data-fr="HAMILCAR"
+            data-fr="HAMILCARaaa"
             data-en="HAMILCAR"
             data-ar="هاميكار"
           >
